# sibsutis

./: .gitignore  README.md  Расписание на стену.docx
1 семестр/Алгебра и геометрия/: Экз_вопросы АлгГеом 2018.doc
1 семестр/История/: ДПР (куплен).docx
1 семестр/Право/: Исследовательская работа по праву 1 семак.docx
1 семестр/Программирование/: РГР по программированию 1 семак.docx
2 семестр/ТРПО/: READ_me.txt  Ответы к экзамену (ХЗ чьи).odt  Экзамен (мой документ).docx
3 семестр/: ИП811-813 Экзамены.docx
3 семестр/temp/: мотеша.docx
3 семестр/temp/Попытки курсовой СиАОД/CourseWork_sas/: CMakeLists.txt  func.cpp  func.hpp  funcOut.cpp  funcOut.hpp  main.cpp  rotationsAVL.cpp  rotationsAVL.hpp  struct.hpp
3 семестр/ООП/: ТЕСТ (в конце семестра).docx
3 семестр/ООП/lab4G_clion/: CMakeLists.txt  circle.cpp  circle.hpp  ellipse.cpp  ellipse.hpp  line.cpp  line.hpp  main.cpp  point.cpp  point.hpp  rectangle.cpp  rectangle.hpp  rhombus.cpp  rhombus.hpp  triangle.cpp  triangle.hpp
3 семестр/ООП/Курсач/Курсач гения (переделанный)/: Application.cpp  Application.hpp  Assets.cpp  Assets.hpp  Board.cpp  Board.hpp  CMakeLists.txt  FieldCell.cpp  FieldCell.hpp  GameWindow.cpp  GameWindow.hpp  GlobalVars.hpp  InfoWindow.cpp  InfoWindow.hpp  MainWindow.cpp  MainWindow.hpp  Ship.cpp  Ship.hpp  WindowInterface.cpp  WindowInterface.hpp  main.cpp  temp.cpp
3 семестр/ЭЭиС/: Лаботарорная работа #1 (ЭЭиС).docx  Лаботарорная работа #2 (ЭЭиС).docx  Лаботарорная работа #3 (ЭЭиС).docx  Лаботарорная работа #4 (ЭЭиС).docx  Лаботарорная работа #5 (ЭЭиС).docx  Лаботарорная работа #6 (ЭЭиС).docx
3 семестр/Экономика (презентация)/: Экономика.pptx  Экономика_v#2.pptx  Экономика_v#3.pptx  Экономика_v#4.pptx
4 семестр/ComputerArchitecture/lab1/: CMakeLists.txt  main.cpp
4 семестр/ComputerArchitecture/lab1/lib/: mySimpleComputer.hpp
4 семестр/ComputerArchitecture/lab2/: CMakeLists.txt
4 семестр/ComputerArchitecture/lab2/lib/: mySimpleComputer.cpp  myTerm.cpp  myTerm.h
4 семестр/EducationalPractice/: ReadMe.md  currencies.csv  Отчет_Учебная_Практика.docx
4 семестр/VirtualProgramming/: Laboratornaya_po_bazam_dannykh_1.doc  Laboratornaya_po_bazam_dannykh_2.doc  Методичка C#_не перечень ЛР.docx  Методичка по ЛР ОВП на Си шарп.docx
4 семестр/РЯ/: Вопросы зачета.docx
5 семестр/OperatingSystem/: ReadME.txt  Экзамен.docx
5 семестр/ТМО/: ТМО. Вопросы_на_зачёт.doc
6 семестр/: ИП811-813.docx
6 семестр/ProductionPractice/: Отчет по произваодственной практике.docx
6 семестр/Sociology/: Тематика статей для зачета.docx
7 семестр/machineLearning/: ReadMe.txt
7 семестр/modernProgrammingTechnologies/: ReadME.txt
8 семестр/Information_theory/: Теория информации.md
diploma/: ReadMe.txt
diploma/0_Заявление на ВКР (completed)/: Заявление на ВКР Мироненко.doc  Заявление на ВКР Мироненко_подписанное.doc
diploma/1_Преддипломная практика (completed)/: Преддипломная_практика.Мироненко_ИП911_ver3.docx
diploma/3_ВКР/: ReadME.md
diploma/3_ВКР (completed)/: 0_Согласие на публикацию текста ВКР_Мироненко_ИП911.docx  1_diploma.drawio  1_Отзыв_Мироненко.docx  2_Доклад защиты ВКР.docx  2_Презентация защиты ВКР.pptx
diploma/_methodologicalMaterials/: вебинар_21.ppt
(+3430 files in other folders)
